test-suite/tests/roundtrip/invalid/semantic/typecheck/partition/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/partition/03/input.essence:5:5:
  |
5 |     (partition() : `partition from bool`) - partition({false}) in
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/roundtrip/invalid/semantic/typecheck/partition/03/input.essence:5:45:
  |
5 |     (partition() : `partition from bool`) - partition({false}) in
  |                                             ^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

